crates/cli/tests/snapshots/lib__check@return_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/return_type_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/return_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[15] Error: Type mismatch. Expected Unit, but got I32
   ╭─[ tests/check/return_type_mismatch.nemo:2:10 ]
   │
 2 │   return 1
   │          ┬  
   │          ╰── Type mismatch. Expected Unit, but got I32
───╯

[15] Error: Type mismatch. Expected I32, but got Unit
   ╭─[ tests/check/return_type_mismatch.nemo:6:10 ]
   │
 6 │   return {}
   │          ─┬  
   │           ╰── Type mismatch. Expected I32, but got Unit
───╯


----- stderr -----
Error: "Check failed with 2 errors"
